[gd_scene load_steps=5 format=3 uid="uid://0lcqsor7v0pg"]

[ext_resource type="Script" path="res://main.gd" id="1_0j1tl"]
[ext_resource type="PackedScene" uid="uid://cjr8k4gaauij6" path="res://player.tscn" id="1_7v22r"]
[ext_resource type="PackedScene" uid="uid://b8jvk1n0wg2td" path="res://art/rock/rock.tscn" id="2_yum27"]

[sub_resource type="Curve2D" id="Curve2D_dkoo5"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1, 1, 0, 0, 0, 0, 1278, -2, 0, 0, 0, 0, 1272, 799, 0, 0, 0, 0, -1, 798, 0, 0, 0, 0, -1, 1)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0j1tl")
rock_scene = ExtResource("2_yum27")

[node name="Player" parent="." instance=ExtResource("1_7v22r")]

[node name="RockTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(622, 389)

[node name="RockPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_dkoo5")

[node name="RockSpawnLocation" type="PathFollow2D" parent="RockPath"]
position = Vector2(-1, 1)
rotation = -0.00234558

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="RockTimer" to="." method="_on_rock_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
